@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.62 2010/07/23 21:19:40 joerg Exp $
+# $NetBSD: Makefile,v 1.63 2012/05/20 20:12:02 joerg Exp $
 
-DISTNAME=	pbulk-0.49
+DISTNAME=	pbulk-0.50
 COMMENT=	Modular bulk build framework
 
 PKG_DESTDIR_SUPPORT=	user-destdir
@@ -33,7 +33,7 @@ SUBST_FILES.tools=	pbulk.conf scripts/build scripts/build-client-start \
 	scripts/compute-packages.awk scripts/create-broken-graph.awk \
 	scripts/create-report-html.awk scripts/create-report-txt.awk \
 	scripts/create-report.awk
-SUBST_VARS.tools=	AWK BZIP2 CHOWN DIGEST GZIP_CMD MAIL_CMD NEATO \
+SUBST_VARS.tools=	AWK BZIP2 CHOWN DIGEST GZIP_CMD ID MAIL_CMD NEATO \
 			PBULK_CONFIG PBULK_CONFIG_VERSION PKG_ADD_CMD \
 			PKG_DELETE_CMD PKG_INFO_CMD PREFIX SED SH TAR \
 			TARGET_MAKE
